src/test/deca/context/valid/extensions/dimensionOfArray.deca


{
    float[] x = new float[4];
}