src/test/deca/context/invalid/extension/array_allocation_memory_not_same.deca
// The type of the variable and its assignation are not compatible


{

	int[][] wrongTab = new int[4];
}